--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ itypes==1.2.0
 Jinja2==3.0.3
 Markdown==3.3.6
 MarkupSafe==2.0.1
+mysqlclient==2.1.0
 openapi-codec==1.3.2
 pytz==2021.3
 PyYAML==6.0
